--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
@@ -1,2 +1,23 @@
-# Tab
-tab.name = name
+#Application Tab
+app_tab.tab_name = Application
+app_tab.current_app = Current app file
+app_tab.current_app_notset = not set
+app_tab.select_app = Select app file
+app_tab.download = Download
+app_tab.update = Update
+
+#Status Tab
+status_tab.tab_name = Status
+status_tab.status_on = ON
+status_tab.status_off = OFF
+status_tab.start = START
+status_tab.stop = STOP
+status_tab.startup = Run when Windows startup
+
+#Configuration Tab
+
+#Configuration Discord Tab
+
+#Configuration YouTube Tab
+
+#Configuration DB Tab
