--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
@@ -1,2 +1,15 @@
-# Tab
-tab.name = имя
+#Application Tab
+app_tab.tab_name = Приложение
+app_tab.current_app = Текущий файл
+app_tab.current_app_notset = не выбрано
+app_tab.select_app = Выбрать файл
+app_tab.download = Скачать
+app_tab.update = Обновить
+
+#Status Tab
+status_tab.tab_name = Состояние
+status_tab.status_on = ON
+status_tab.status_off = OFF
+status_tab.start = СТАРТ
+status_tab.stop = СТОП
+status_tab.startup = Запускать при загрузке Windows
