--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
@@ -12,7 +12,6 @@ status_tab.status_on = ON
 status_tab.status_off = OFF
 status_tab.start = START
 status_tab.stop = STOP
-status_tab.startup = Run when Windows startup
 
 #Configuration Tab
 
@@ -21,3 +20,9 @@ status_tab.startup = Run when Windows startup
 #Configuration YouTube Tab
 
 #Configuration DB Tab
+
+#Settings Tab
+setting_tab.tab_name = Settings
+setting_tab.hide = Hide to tray on close
+setting_tab.startup = Run when Windows startup
+setting_tab.language = Language launcher
