--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
@@ -12,4 +12,17 @@ status_tab.status_on = ON
 status_tab.status_off = OFF
 status_tab.start = СТАРТ
 status_tab.stop = СТОП
-status_tab.startup = Запускать при загрузке Windows
+
+#Configuration Tab
+
+#Configuration Discord Tab
+
+#Configuration YouTube Tab
+
+#Configuration DB Tab
+
+#Settings Tab
+setting_tab.tab_name = Настройки
+setting_tab.hide = Сворачивать в трей вместо выключения
+setting_tab.startup = Запускать при загрузке Windows
+setting_tab.language = Язык лаунчера
