--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
@@ -14,15 +14,22 @@ status_tab.start = СТАРТ
 status_tab.stop = СТОП
 
 #Configuration Tab
+config_tab.tab_name = Файл конфигурации
 
 #Configuration Discord Tab
+config_tab_discord.tab_name = Конфигурация Discord API
 
 #Configuration YouTube Tab
+config_tab_youtube.tab_name = Конфигурация YouTube
 
 #Configuration DB Tab
+config_tab_db.tab_name = Конфигурация БД
 
 #Settings Tab
 setting_tab.tab_name = Настройки
-setting_tab.hide = Сворачивать в трей вместо выключения
-setting_tab.startup = Запускать при загрузке Windows
+setting_tab.show_in_tray = Отображать в трее
+setting_tab.hide_on_close = Сворачивать в трей вместо выключения
+setting_tab.startup_launcher = Запускать лаунчер при загрузке Windows
+setting_tab.autostart_app = Запускать приложение при загрузке лаунчера
 setting_tab.language = Язык лаунчера
+setting_tab.restart_hint = Изменения вступят в силу после перезагрузки лаунчера
