--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
@@ -14,15 +14,22 @@ status_tab.start = START
 status_tab.stop = STOP
 
 #Configuration Tab
+config_tab.tab_name = Configuration file
 
 #Configuration Discord Tab
+config_tab_discord.tab_name = Configuration Discord API
 
 #Configuration YouTube Tab
+config_tab_youtube.tab_name = Configuration YouTube
 
 #Configuration DB Tab
+config_tab_db.tab_name = Configuration DB
 
 #Settings Tab
 setting_tab.tab_name = Settings
-setting_tab.hide = Hide to tray on close
-setting_tab.startup = Run when Windows startup
-setting_tab.language = Language launcher
+setting_tab.show_in_tray = Show in tray
+setting_tab.hide_on_close = Hide to tray on close
+setting_tab.startup_launcher = Run when Windows startup
+setting_tab.autostart_app = Run application when launcher startup
+setting_tab.language = Launcher language
+setting_tab.restart_hint = Changes will take effect after restarting the launcher
