--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
@@ -29,7 +29,7 @@ config_tab_db.tab_name = Configuration DB
 setting_tab.tab_name = Settings
 setting_tab.show_in_tray = Show in tray
 setting_tab.hide_on_close = Hide to tray on close
-setting_tab.startup_launcher = Run when Windows startup
+setting_tab.autostart_launcher = Run launcher when Windows startup
 setting_tab.autostart_app = Run application when launcher startup
 setting_tab.language = Launcher language
 setting_tab.restart_hint = Changes will take effect after restarting the launcher
