--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
@@ -29,7 +29,7 @@ config_tab_db.tab_name = Конфигурация БД
 setting_tab.tab_name = Настройки
 setting_tab.show_in_tray = Отображать в трее
 setting_tab.hide_on_close = Сворачивать в трей вместо выключения
-setting_tab.startup_launcher = Запускать лаунчер при загрузке Windows
+setting_tab.autostart_launcher = Запускать лаунчер при загрузке Windows
 setting_tab.autostart_app = Запускать приложение при загрузке лаунчера
 setting_tab.language = Язык лаунчера
 setting_tab.restart_hint = Изменения вступят в силу после перезагрузки лаунчера
