--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
@@ -14,16 +14,18 @@ status_tab.start = START
 status_tab.stop = STOP
 
 #Configuration Tab
-config_tab.tab_name = Configuration file
+config_tab.tab_name = Configuration files
+config_tab.backup = Backup
+config_tab.restore = Restore
 
 #Configuration Discord Tab
-config_tab_discord.tab_name = Configuration Discord API
+config_tab_discord.tab_name = Discord API
 
 #Configuration YouTube Tab
-config_tab_youtube.tab_name = Configuration YouTube
+config_tab_youtube.tab_name = YouTube
 
 #Configuration DB Tab
-config_tab_db.tab_name = Configuration DB
+config_tab_db.tab_name = Database
 
 #Settings Tab
 setting_tab.tab_name = Settings
