--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
@@ -14,16 +14,18 @@ status_tab.start = СТАРТ
 status_tab.stop = СТОП
 
 #Configuration Tab
-config_tab.tab_name = Файл конфигурации
+config_tab.tab_name = Файлы конфигурации
+config_tab.backup = Сохранить копию
+config_tab.restore = Восстановить копию
 
 #Configuration Discord Tab
-config_tab_discord.tab_name = Конфигурация Discord API
+config_tab_discord.tab_name = Discord API
 
 #Configuration YouTube Tab
-config_tab_youtube.tab_name = Конфигурация YouTube
+config_tab_youtube.tab_name = YouTube
 
 #Configuration DB Tab
-config_tab_db.tab_name = Конфигурация БД
+config_tab_db.tab_name = База данных
 
 #Settings Tab
 setting_tab.tab_name = Настройки
