--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_en.properties
@@ -35,3 +35,6 @@ setting_tab.autostart_launcher = Run launcher when Windows startup
 setting_tab.autostart_app = Run application when launcher startup
 setting_tab.language = Launcher language
 setting_tab.restart_hint = Changes will take effect after restarting the launcher
+setting_tab.save = Save
+setting_tab.show_custom_app_name = Show custom app name in title bar and tray
+setting_tab.custom_app_name = Custom app name
