--- a/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
+++ b/HellBot Launcher/src/main/resources/localization/halot/nikitazolin/launcher/gui/tab/tab_ru.properties
@@ -35,3 +35,6 @@ setting_tab.autostart_launcher = Запускать лаунчер при заг
 setting_tab.autostart_app = Запускать приложение при загрузке лаунчера
 setting_tab.language = Язык лаунчера
 setting_tab.restart_hint = Изменения вступят в силу после перезагрузки лаунчера
+setting_tab.save = Сохранить
+setting_tab.show_custom_app_name = Отображать пользовательское название в заголовке и трее
+setting_tab.custom_app_name = Пользовательское название
